[metadata]
name = discord_mod_utils
description = A very simple discord moderation utilities bot
author = rizerphe
platforms = unix, linux, osx, sygwin, win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages =
    discord_mod_utils
    discord_mod_utils.cogs
    discord_mod_utils.cogs.moderation
install_requires =
    py-cord>=2.0.0b7
    firebase-admin>=5
    python-dotenv>=0.20
    click>=8
    humanize>=4
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    discord-mod-utils-bot = discord_mod_utils.bot:main

[option.package_data]
discord_mod_utils = py.typed